// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`multi line comment 1`] = `
"<script lang="ts">
  /*
if (foo) {
  bar();
} else {
  baz();
}
*/
</script>

<template>
  <button
    type="button"
    on:click={() => {
      /*
if (foo) {
  bar();
} else {
  baz();
}
*/
    }}
  >
    Click Me
  </button>
</template>
"
`;

exports[`single line comment (1) 1`] = `
"<script lang="ts">
  //class Foo {}
</script>

<template>
  <button
    type="button"
    on:click={() => {
      //class Foo {}
    }}
  >
    Click Me
  </button>
</template>
"
`;

exports[`single line comment (2) - applied to multi line 1`] = `
"<script lang="ts">
  // function foo() {
  //   bar;
  // }
</script>

<template>
  <button
    type="button"
    on:click={() => {
      // function foo() {
      //   bar;
      // }
    }}
  >
    Click Me
  </button>
</template>
"
`;
